2010-06-16 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 5 released.

2010-06-15 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Add --color={never,always,auto} command line option
	and color: {never,always,auto} config option (trac ticket #68), defaulting
	to `never'. Also did some code refactoring/lightening (created a Display
	class). Updated clush and clush.conf man pages.

2010-06-09 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Automatically increase open files soft limit (trac
	ticket #61). Handle "Too many open files" exception.

	* Task.py: Add excepthook and default_excepthook methods to handle
	uncaught exception in a Task thread. Make it compliant with sys.excepthook
	also.

2010-06-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 4 released.

	* doc/extras/vim/syntax/groupsconf.vim: Improved vim syntax file for
	groups.conf (trac ticket #85): now $GROUP and $NODE are keywords.

	* scripts/clush.py: Do not wait the end of all commands when using -bL
	switches when possible (trac ticket #69).

	* MsgTree.py: Added remove(match) method to remove entry from the tree.

	* Task.py: Added flush_buffers() and flush_errors() methods.

	* Worker/Worker.py: Added flush_buffers() and flush_errors() methods.

2010-05-26 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 3 released.

	* scripts/clush.py: Fixed issue (-g/-X group not working as expected)
	found in release 1.3 beta2.

2010-05-25 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 2 released.

	* scripts/clush.py: Added -G, --groupbase to strip group source prefix
	when using -r.

	* scripts/clubak.py: Added -G, --groupbase to strip group source prefix
	when using -r.

	* scripts/nodeset.py: Changed -N, --noprefix to -G, --groupbase to avoid
	conflict with clush -N.

	* scripts/clush.py: Fixed missing support for group source (-s
	GROUPSOURCE) when using -a or -g GROUP.

	* scripts/nodeset.py: Added --all, -a support (also work is -s